2008-02-16  Jean Delvare  <khali@linux-fr.org>

	* util.c, util.h: New helper function write_dump.
	* dmidecode.c, dmiopt.c, dmiopt.h: New option --dump-bin, dump
	  the DMI data to a sparse binary file.
	* dmidecode.8: Document the new option --dump-bin.

2007-06-30  Jean Delvare  <khali@linux-fr.org>

	* config.h: Add support for Solaris (x86 only, of course). Based
	  on a patch by Sun's Dan Mick, brought to my knowledge by
	  Attila Nagy.

2007-06-27  Jean Delvare  <khali@linux-fr.org>

	* Makefile: Fix the uninstall-man target.

2007-06-07  Jean Delvare  <khali@linux-fr.org>

	* dmidecode.c: If the SMBIOS entry point decoding fails (for
	  example due to a bad checksum), still try decoding the
	  encapsulated DMI entry point. Suggested by Luke Suchocki.
	* dmidecode.c: Replace all occurrences of "KB" by the more
	  correct "kB".

2007-03-16  Jean Delvare  <khali@linux-fr.org>

	* vpddecode.c: Stop asking the user to report bad checksums,
	  unaligned records and the like. Such machines exist, too bad,
	  we have to live with it.

2007-02-27  Jean Delvare  <khali@linux-fr.org>

	* biosdecode.c: Fix a compilation error with non-C99 compilers.
	  Patch from Francois Revol.

2007-02-26  Jean Delvare  <khali@linux-fr.org>

	* dmidecode.c: Fix an array overrun while decoding the system
	  event log status (DMI type 15).
	* biosdecode.c: Use printf instead of fwrite.
	* dmidecode.8: Some OEM-specific types can be decoded now.
	* biosdecode.8: List the FJKEYINF entry point type.
	* vpddecode.8: The product name is no longer displayed.
	* version.h: Set version to 2.9.

2007-02-16  Jean Delvare  <khali@linux-fr.org>

	* dmidecode.c: Do not print the BIOS base address and runtime size
	  if the base address is 0. This happens on IA-64 because there's
	  no BIOS.
	* Makefile, README: Do not build biosdecode, ownership and
	  vpddecode on IA-64, as IA-64 systems have no BIOS. This was
	  quite tricky to keep both GNU make and BSD make happy, but it