@@ -1,8 +1,8 @@
 /*
  * BIOS Decode
  *
- *   (C) 2000-2002 Alan Cox <alan@redhat.com>
- *   (C) 2002-2007 Jean Delvare <khali@linux-fr.org>
+ *   Copyright (C) 2000-2002 Alan Cox <alan@redhat.com>
+ *   Copyright (C) 2002-2007 Jean Delvare <khali@linux-fr.org>
  *
  *   This program is free software; you can redistribute it and/or modify
  *   it under the terms of the GNU General Public License as published by
